--- a/finger-cipher/style.css
+++ b/finger-cipher/style.css
@@ -70,3 +70,33 @@ color: black;
 .column {
   flex: 50%;
 }
+
+  /* Add a light green background color to the top navigation */
+.topnav2 {
+background-color: #8ad195;
+overflow: hidden;
+align: center;
+}
+
+/* Style the links inside the navigation bar */
+.topnav2 a {
+float: left;
+color: #f2f2f2;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav2 a:hover {
+background-color: #ddd;
+color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav2 a.active {
+background-color: #ffdb72;
+color: black;
+}
+
