--- a/finger-cipher/style.css
+++ b/finger-cipher/style.css
@@ -15,6 +15,11 @@ padding: 15px 20px;
 
 }
 
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
   /* Add a black background color to the top navigation */
 .topnav {
 background-color: #333;
